--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 <div class=page>
     <h1><img src="/images/icon1.png" alt="Icon1"/>Chirp!</h1>
     
-    <partial name="_LoginPartial" />
+    @await Html.PartialAsync("_LoginPartial")
 
     <div class=body>
             @RenderBody()
