--- a/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using Chirp.Core
+﻿@using Chirp.Razor
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
