Small comment fixes

--- a/src/Chirp.Web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/src/Chirp.Web/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -43,7 +43,7 @@
                 </div>
             }
 
-            <!-- LARGE RED CONFIRMATION BUTTON -->
+            <!-- Larde pink confirmation button -->
             <button type="submit"
                     class="btn btn-danger btn-lg mt-3 w-100">
                 Forget me!
